@@ -1,5 +1,3 @@
-require 'active_support/core_ext/float/rounding.rb' # Float#round(precision)
-
 module ActiveMerchant #:nodoc:
   module Billing #:nodoc:
     module Integrations #:nodoc:
