@@ -3,6 +3,7 @@
 * Add Barclays ePDQ Extra Plus gateway [ntalbott]
 * PayPal: Add MassPay payment to recipients by UserID [damonmorgan]
 * Authorize.Net: Add authorization_code to response params [noahlh]
+* Make Rails 4 a supported version [sanemat]
 
 == Version 1.34.1 (June 28, 2013)
 
